--- a/Laboratorio 11/views/nombres.ejs
+++ b/Laboratorio 11/views/nombres.ejs
@@ -1,3 +1,4 @@
+<%- include('includes/head.ejs') %>
 <!DOCTYPE html> 
 <html>
     <head> 
@@ -8,10 +9,10 @@
         <br><br> 
         <% for(let i in Nombres){ %>
             <ul>
-                <li> <%= Nombres[i] %> </li>
+                <li> <%= Nombres[i].t_nombre %> </li>
             </ul>
         <% } %>
         <br><br> 
-        <a href="/nombres/nuevo">Escribe tus nombres favoritos</a>
     </body>
 </html>
+<%- include('includes/foot.ejs') %>
